# maya-usd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Jenkinsbuild.json  Jenkinsconfig.json  Jenkinsfile  Jenkinsfile_oss_sync  PULL_REQUEST_TEMPLATE.md  README.md  Version.h.in  package.py  package.yaml
AL_EventSystem/: CMakeLists.txt  package.py  src
AL_MayaUtils/: CMakeLists.txt  package.py  src
AL_USDMayaUtils/: CMakeLists.txt  package.py  src
AL_USDTransaction/: CMakeLists.txt  Jenkinsfile  package.py  src
AL_USDUtils/: .gitignore  CMakeLists.txt  package.py  src
AL_Utils/: CMakeLists.txt  package.py
build_scripts/: build_all_packages.sh  build_and_test_all_packages.sh  build_docker_internal.sh  build_maya.sh  build_maya2016.sh  build_maya2017.sh  windows_build.bat
changelog_scripts/: update_changelog.py  update_changelog.sh
cmake/: AL_USDMaya.cmake
docker/: build_alusdmaya.sh
integration_tests/: CMakeLists.txt  package.py
integration_tests/schemas_merge/: test_merge.py
lib/AL_USDMaya/AL/usdmaya/: Version.h
mel/: al_usdmaya_autoload.mel
mel/2018/: al_usdmaya_autoload.mel
mel/2019/: al_usdmaya_autoload.mel
plugin/al/lib/AL_USDMaya/AL/docpages/: docs_codegroups.h  docs_events.h  docs_mayaevents.h  docs_mayahelpers.h  docs_translator_plugins.h
plugin/al/lib/AL_USDMaya/AL/usdmaya/cmds/: SyncFileIOGui.h
plugin/al/lib/AL_USDMaya/AL/usdmaya/fileio/translators/: ExtraDataPlugin.cpp  ExtraDataPlugin.h  TestExtraDataPlugin.cpp
plugin/al/lib/AL_USDMaya/AL/usdmaya/nodes/: Engine.cpp  Engine.h  ProxyShape.h  wrapLayerManager.cpp
plugin/al/mayautils/AL/maya/tests/mayaplugintest/: test_maya_MenuBuilder.cpp  test_maya_NodeHelper.cpp  test_mobjectmap.cpp
plugin/al/mayautils/AL/maya/tests/mayaplugintest/utils/: PluginTranslatorOptionsTest.cpp
plugin/al/mayautils/AL/maya/utils/: DebugCodes.h  PluginTranslatorOptions.cpp  PluginTranslatorOptions.h  Utils.cpp  Utils.h
plugin/al/plugin/AL_USDMayaTestPlugin/AL/maya/: test_DiffCore.cpp  test_EventHandler.cpp  test_MatrixToSRT.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/: test_DiffGeom.cpp  test_DiffPrimVar.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/commands/: test_TranslateCommand.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/fileio/: export_blendshape.cpp  export_constraints.cpp  export_ik.cpp  export_import_instancing.cpp  export_lattice.cpp  export_multiple_shapes.cpp  export_nonlinear.cpp  export_unmerged.cpp  import_instances.cpp  test_activeInActiveTranslators.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/AL/usdmaya/nodes/: test_ExtraDataPlugin.cpp
plugin/al/plugin/AL_USDMayaTestPlugin/py/: examplecubetranslator.py  testLayerManager.py  testProxyShape.py  testTranslators.py
plugin/al/translators/: CommonTranslatorOptions.cpp  CommonTranslatorOptions.h  DirectionalLight.h  FrameRange.cpp  FrameRange.h
plugin/al/translators/pxrUsdTranslators/tests/: testPxrTranslators.py
plugin/al/translators/tests/: testTranslators.py  translatortestutils.py
plugin/al/usdmayautils/AL/usdmaya/utils/: DiffPrimVar.cpp  DiffPrimVar.h  ForwardDeclares.h
plugin/al/usdtransaction/AL/usd/transaction/: module.cpp
plugin/al/usdtransaction/AL/usd/transaction/tests/: testMain.cpp  testTransaction.cpp  testTransaction.py  testTransactionManager.cpp  testTransactionManager.py
plugin/al/usdutils/AL/usd/utils/: DiffCore.cpp  DiffCore.h
schemas/: __init__.py  filter_pluginfo.py
src/: CMakeLists.txt
src/cmake/modules/: FindUSD.cmake
src/lib/AL_USDMaya/AL/usdmaya/: PluginRegister.h  Version.h
src/lib/AL_USDMaya/AL/usdmaya/nodes/: ProxyShape.cpp  ProxyShapeSelection.cpp
src/plugin/al/lib/AL_USDMaya/AL/usdmaya/: Version.h
src/plugin/al/lib/AL_USDMaya/AL/usdmaya/nodes/: ProxyDrawOverride.cpp  ProxyShapeSelection.cpp  ProxyShapeUI.cpp  TransformationMatrix.cpp  TransformationMatrix.h
src/plugin/al/mayautils/AL/maya/: CMakeLists.txt
src/plugin/al/schemas/AL/usd/schemas/maya/tests/: CMakeLists.txt
src/plugin/al/usdmayautils/AL/usdmaya/utils/: CMakeLists.txt
src/plugin/al/usdtransaction/AL/usd/transaction/: CMakeLists.txt
sync_scripts/: push_develop_to_opensource.sh  push_docs_to_opensource.sh  push_release.sh  push_releases_to_opensource.sh
tutorials/animatedMesh/: animatedMeshImport.py
ufe/: maya-ufe-cmd-plugin.py  maya-ufe-usd-plugin.py
ufe/ufeScripts/: ufeParentCmd.py  ufeSelectCmd.py  usdRunTime.py  usdSubject.py  usdXformOpCmds.py
